<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021 bytedance
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ Create Date : 2021/12/29
  -->

<resources>
    <string name="settings_detail_item_strategy" translatable="false">Strategy</string>
    <string name="settings_detail_item_type" translatable="false">Type</string>
    <string name="settings_detail_item_desc" translatable="false">Desc</string>
    <string name="settings_detail_item_category" translatable="false">Category</string>
    <string name="settings_detail_item_key" translatable="false">Key</string>
    <string name="settings_detail_option_info_title" translatable="false">Option Info</string>
    <string name="settings_detail_catetory_option_values_title">Option Values</string>
</resources>